--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Exercice 5</title>
@@ -18,6 +18,7 @@
 
   <body>
     <table>
+      <!-- <caption> pour le titre ou la légende d'un tableau -->
       <caption>Mon compte BNP</caption>
       <thead>
         <tr align=center>
